integrated variables SASS file. Integrated variables in SASS files. ModalCard now has a fixed height/width with overflow. Card is now centered on desktop and mobile. Also conducted styling audit and removed CSS attributes that were not contributing to the app.

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,11 +1,4 @@
-$blue: #0079c1;
-$gray: #efefef;
-$white: #fff;
-$header-height: 50px;
-
-//? when I try to incorporate $header-height in
-// .mapview-container height attribute, the map isn't able to render
-// even though this same approach works in other SASS files
+@import 'variables.scss';
 
 html,
 body {
@@ -13,11 +6,6 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  // display: flex;
-  // flex-direction: column;
-  // letter-spacing: 0em;
-  // font-family: "Arial", sans-serif;
-  // line-height: 1.55rem;
 }
 
 .mapview-container,
